# birdnet

./: Cargo.toml  LICENSE
birdnet/: Cargo.toml
birdnet-binary/: Cargo.toml
birdnet-binary/src/: lib.rs  reader.rs  writer.rs
birdnet-derive/: Cargo.toml
birdnet-derive/src/: lib.rs
birdnet/src/: abort_when_drop.rs  codable.rs  constants.rs  lib.rs  listener.rs  settings.rs  socket.rs  types.rs  utils.rs
birdnet/src/protocol/: conn_request.rs  datagram.rs  disconnect.rs  mod.rs  open.rs  packets.rs  ping.rs
birdnet/src/service/: connection.rs  mod.rs  open_connection.rs  ping.rs  service.rs  socket.rs
birdnet_code/: Cargo.toml
birdnet_code/src/: lib.rs
birdnet_derive/: Cargo.toml
birdnet_derive/src/: lib.rs
