[package]
name = "birdnet"
version = "0.1.0"
authors = ["WhiteGrouse <39170892+WhiteGrouse@users.noreply.github.com>"]
edition = "2018"

[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"
futures = "0.3.4"
async-std = { version = "1.6.2", features = ["unstable"] }
byteorder = "1.3.4"
rand = "0.7.3"
async-trait = "0.1.35"
birdnet_code = { path = "../birdnet_code" }
birdnet_derive = { path = "../birdnet_derive" }
